2020-01-17  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use Python 3 for Python scripts.

	* configure.ac:
	  - Bump minimum Python version in AM_PYTHON_PATH from 2.7 to 3.7.
	  - Drop third arg for AX_PYTHON_MODULE and use the default.
	* scripts/gen.mk:
	  - Call Python interpreter explicitly using the PYTHON variable
	    as detected by configure instead of relying on the hard-coded
	    shebang in Python scripts.
	* scripts/gen-otf.py, scripts/gen-pfa.py, scripts/gen-pfb.py:
	  - Remove shebang.
	  - chmod -x

2020-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename source package to 'fonts-arundina'

	Reasons:
	- We wanted a shorter package name for use in LaTeX, and we have
	  already done it with the CTAN package for years.
	- The GitHub repository was also imported under the shortened name.
	- We want to have the consistent distributed tarball name as well.
	- It was originally SIPA's intention to have the font name come up
	  in the sorted list. The "sipa" part in the name have made
	  the package itself fall down to a very low rank so far.

	* configure.ac:
	  - Replace package name in AC_INIT.

2019-12-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use GitHub issue tracker instead of submission URL.

	* configure.ac:
	  - Replace GitHub new-issue URL with issue tracker one.

2019-12-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use GitHub bug report URL.

	* configure.ac:
	  - Replace bug report e-mail address with GitHub new-issue URL.

2019-03-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Sans: Fine-tune quadratic splines.

	* arundina/ArundinaSans[-*].sfd:
	  - Fine-tune quadratic splines in 'Fore' layer,
	    with AutoInstr re-applied.
	  - Adjust cubic splines in 'Cube' layer as appropriate.
	  - Bump font version to 2.02.

2019-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Set TTF Preferred Family separately for each family.

	Using the same "Arundina" in all families confuses GTK+